--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"No tests yet...\"",
-    "start": "func: host start"
+    "start": "host start"
   },
   "author": "",
   "dependencies": {
